fixed a missing color

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
     align-items: end;
     padding-bottom: 6px;
     justify-content: center;
+    color: black;
 }
 
 .white-key:hover, .white-key:active {
